<resources>
    <string name="app_name">Tuber</string>
    <string name="facebook_app_id">276398292734050</string>
    <string name="facebook_application_id">276398292734050</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Choose a country</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Israel</item>
        <item>England</item>
        <item>Croatia</item>
        <item>Poland</item>
        <item>South Africa</item>
    </string-array>


    <string name="city_prompt">Choose a city</string>
    <string-array name="city_arrays">
        <item>Choose a city</item>
        <item>Tel-Aviv</item>
        <item>London</item>
        <item>New-York</item>
        <item>Paris</item>
        <item>Rome</item>
        <item>Jerusalem</item>
        <item>New-Delhi</item>
        <item>Madrid</item>
    </string-array>

    <string name="subjects_prompt">Choose a city</string>
    <string-array name="subjects_arrays">
        <item>Choose a subject</item>
        <item>android</item>
        <item>Java programming</item>
        <item>English lessons</item>
        <item>C# Programming</item>
        <item>Algebra</item>
        <item>Yoga classes</item>
        <item>web development</item>
    </string-array>

    <string name="languages_prompt">Choose a city</string>
<<<<<<< HEAD
    <string name="i_m_a_student">I\'m a student</string>
    <string name="i_m_a_tuter">I\'m a tuter</string>
=======
    <string name="lowers">TUTORS WITH PRICES LOWER THAN YOURS</string>
    <string name="subject">TUTORS TEACHING THE SAME SUBJECT</string>
    <string name="average_price_for_your_course">AVERAGE PRICE FOR YOUR COURSES</string>
>>>>>>> 36b1af0b3baed3a69f55a5ecf605bcfe1316080c
    <string-array name="languages_arrays">
        <item>Choose a Language</item>
        <item>English</item>
        <item>Hebrew</item>
        <item>French</item>
        <item>Spanish</item>

    </string-array>


</resources>
