<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

<include layout="@layout/toolbar"/>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Statistics"
        xmlns:plainpie="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout1"
            android:padding="32dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lowers"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="16px"
                android:textStyle="bold"/>

            <az.plainpie.PieView
                android:id="@+id/pieView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                plainpie:inner_pie_padding="30"
                plainpie:percentage="75"
                plainpie:percentage_size="70"
                plainpie:inner_text_visibility="true"
                android:layout_weight="0"
                android:padding="16px"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layout1"
            android:padding="32dp"
            android:id="@+id/layout2"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/average_price_for_your_course"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="16px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="25.5$"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="40sp"
                android:padding="16px"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layout2"
            android:padding="32dp"
            android:layout_centerHorizontal="true">

            <az.plainpie.PieView
                android:id="@+id/pieView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                plainpie:inner_pie_padding="30"
                plainpie:percentage="30"
                plainpie:percentage_size="70"
                plainpie:inner_text_visibility="true"
                android:layout_weight="0"
                android:padding="16px"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subject"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="16px"
                android:id="@+id/mysubject"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>