<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:id = "@+id/place_icon"
                    android:src="@drawable/place"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/place_icon"
                    android:layout_centerVertical="true"
                    android:text="Country"/>
                <Spinner
                    android:id="@+id/countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:entries="@array/country_arrays"
                    android:prompt="@string/country_prompt" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:id = "@+id/place_icon2"
                    android:src="@drawable/pin_drop"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/place_icon2"
                    android:layout_centerVertical="true"
                    android:text="City"/>
                <Spinner
                    android:id="@+id/cities"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:entries="@array/city_arrays"
                    android:prompt="@string/city_prompt" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:id = "@+id/subjects_icon"
                    android:src="@drawable/subject"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/subjects_icon"
                    android:layout_centerVertical="true"
                    android:text="Subject"/>
                <Spinner
                    android:id="@+id/subjects"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:entries="@array/subjects_arrays"
                    android:prompt="@string/subjects_prompt" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:id = "@+id/lang_icon"
                    android:src="@drawable/language"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/lang_icon"
                    android:layout_centerVertical="true"
                    android:text="Language"/>
                <Spinner
                    android:id="@+id/languages"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:entries="@array/languages_arrays"
                    android:prompt="@string/languages_prompt" />


            </RelativeLayout>

            <CheckBox
                android:layout_marginTop="20dp"
                android:id="@+id/frontal"
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Frontal Lessons" />

            <CheckBox
                android:id="@+id/online"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="On-line Lessons"
                android:checked="true" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>